--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 ﻿{
   "name": "cn.etetet.yiuigm",
   "displayName": "ET.YIUI.GM",
-  "version": "0.0.20",
+  "version": "0.0.30",
   "unity": "2022.3",
+  "category": "UI",
   "description": "YIUI GM命令 >>> 文档: https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh",
   "author": {
     "name": "YIUI",
@@ -14,8 +15,8 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "cn.etetet.yiuiframework": "0.0.20",
-    "cn.etetet.yiuiloopscrollrectasync": "0.0.20"
+    "cn.etetet.yiuiframework": "0.0.30",
+    "cn.etetet.yiuiloopscrollrectasync": "0.0.30"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ET-Packages"
