--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "ET.YIUI.GM",
   "version": "0.0.30",
   "unity": "2022.3",
-  "category": "UI",
+  "category": "UI/YIUI",
   "description": "YIUI GM命令 >>> 文档: https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh",
   "author": {
     "name": "YIUI",
