--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "category": "UI/YIUI",
   "description": "YIUI GM命令 >>> 文档: https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh",
   "author": {
-    "name": "YIUI",
+    "name": "YIYI",
     "url": "https://github.com/LiShengYang-yiyi/YIUI/tree/YIUI-ET9.0"
   },
   "repository": {
