--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "cn.etetet.yiuiframework": "2.0.0",
-    "cn.etetet.yiuiloopscrollrectasync": "2.0.0"
+    "cn.etetet.core": "2.0.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ET-Packages"
